Issue 21/event member api (#68)
* EventMember controller init

* feat: add event_members#rate to routes

* fix: add namespace to controllers

* feat: init Pundit

* feat: EventMembersController indexes

* feat: EventMembersController show

* feat: EventMembersController rate

* fix: render_forbidden

* feat: EventMembersController create

* feat: add activerecord-import

* fix: create route and params

* test: add event_member request spec

* fix: event_member create params

* fix: use less custom errors

* fix: error handling

* feat: add rswag for event_members

* fix: event_members rswag

* test: add event model methods tests

* fix: import! in event_member_service

* feat: add LogEntryCreationJob call in EventMembersController#create

* fix: explicitly include Authorization header in rswag

* feat: add ParamValidation concern with validate_id_param

* refactor: remove magic strings

* fix: addressing comments

* fix: remove general index in EventMemberController

* refactor: EventMemberService

* feat: add joined to EventsController

* refactor: event service and controller

* fix: change extend to include in EventService

* docs: update event_member swagger

* refactor: event and event_member specs
