# api/app/controllers/api/v1/events_controller.rb
@@ -1,10 +1,10 @@
-class Api::V1::EventsController < ApplicationController
+class Api::V1::EventsController < Api::V1::BaseController
   include Serialization
 
   before_action :validate_id_param, only: [ :show, :update ]
 
   def index
-    @events = EventService.fetch(params)
+    @events = EventService.new(params).fetch
 
     render json: {
       data: serialized_events(@events),
@@ -12,52 +12,47 @@ class Api::V1::EventsController < ApplicationController
    }
   end
 
+  def joined
+    @events = EventService.new(params).fetch_joined(current_user)
+
+    render json: {
+      data: serialized_events(@events),
+      pagination: pagination_meta(@events)
+    }
+  end
+
   def show
-    event = Event.find(params[:id])
-    render json: { data: EventSerializer.new(event).as_json }
-  rescue ActiveRecord::RecordNotFound
-    raise Api::Errors::EventError::NotFound.new(id: params[:id])
+    find_event!
+
+    render json: { data: EventSerializer.new(@event, view: :full).as_json }
   end
 
   def create
-    result = EventService.create(event_params)
+    result = EventService.new(event_params).create
 
     if result.success
-      render json: { data: EventSerializer.new(result.event).as_json }, status: :created
+      render json: { data: EventSerializer.new(result.event, view: :full).as_json }, status: :created
     else
       raise Api::Errors::EventError::ValidationError.new(meta: { errors: result.errors })
     end
   end
 
   def update
-    event = Event.find(params[:id])
-    authorize event
-    result = EventService.update(params[:id], event_params)
+    find_event!
+
+    authorize @event
+
+    result = EventService.new(event_params).update(@event)
 
     if result.success
       render json: { data: EventSerializer.new(result.event).as_json }, status: :ok
     else
       render json: { errors: result.errors }, status: :unprocessable_entity
     end
-  rescue ActiveRecord::RecordNotFound
-    render json: { error: "Event not found", id: params[:id] }, status: :not_found
   end
 
   private
 
-  def validate_id_param
-    validation_result = Api::V1::IdParamSchema.call(params.to_unsafe_h)
-
-    unless validation_result.success?
-      raise Api::Errors::EventError::ValidationError.new(
-        meta: { errors: validation_result.errors.to_h }
-      )
-    end
-
-    params.merge!(validation_result.to_h)
-  end
-
-  # Strong params
   def event_params
     params.require(:event).permit(
       :title,
@@ -73,5 +68,12 @@ class Api::V1::EventsController < ApplicationController
       :proposed_desc,
       :proposed_location
     )
+  end
+
+  def find_event!
+    @event = Event.find(params[:id])
+
+  rescue ActiveRecord::RecordNotFound
+    raise Api::Errors::EventError::NotFound.new(id: params[:id])
   end
 end
